--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </section>
     <section class="hero"></section>
     <section class="content">
-        <section class="search-engine-optimization">
+        <section class="details" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
-        <section class="online-reputation-management">
+        <section class="details" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
-        <section class="social-media-marketing">
+        <section class="details" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
@@ -47,7 +47,7 @@
             <img src="./assets/images/brand-awareness.png" alt="Lightbulb with Wi-Fi signal" />
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-lead">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png">
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
