added header element, adjusted CSS to affect element rather than header class type

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <article>
             <ul>
@@ -17,8 +17,8 @@
                 <li> <a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </article>
-    </section>
-    <article class="herobanner"></article>
+    </header>
+    <article class="herobanner" alt=" "></article>
     <section class="content">
         <article class="service-details" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
