--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </article>
     </section>
-    <section class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </section>
+    </footer>
 </body>
 
 </html>
