--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Horiseon can help you turn optimization into profit!"/>
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
-        </article>>
+        </article>
         <article class="service-breakdown">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Horiseon can increase the visibility of your brand." />
